--- a/style.css
+++ b/style.css
@@ -2,9 +2,13 @@
 table,
 th,
 td{
-    border: 2px solid black;
+    border: 1px solid black;
 }
 
 input{
     margin-bottom: 10px;
+}
+
+.header {
+    width: 50%
 }
